Bug 249841 - False positives from message bodies search in newsgroups and IMAP accounts.  v1 make nsMsgBodyHandler understand that offline messages have line counts including the header. with suggested fix. r+sr=bienvenu.